@@ -132,6 +132,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <skipTests>false</skipTests>
+                    <argLine>--enable-preview</argLine>
                     <excludes>
                         <exclude>**/WarehouseMessageConsumerTest.java</exclude>
                     </excludes>
